# IMAC_MathsInfoRatio

./: .gitignore  CMakeLists.txt  README.md
build2/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build2/INTERFACE/: Makefile  cmake_install.cmake
build2/test/: Makefile  cmake_install.cmake
libRatio/: CMakeLists.txt
libRatio/doc/: CMakeLists.txt  Doxyfile  Doxyfile-html  Doxyfile-html.cmake
libRatio/include/: Ratio.hpp
libRatio/src/: Ratio.cpp
libRationnel/: CMakeLists.txt
libRationnel/include/: Ratio.hpp
libRationnel/src/: Ratio.cpp
test/: CMakeLists.txt
test/src/: main.cpp  test.cpp
